Added missing TODO item *blush*

--- a/AMG_Models_MS4.ipynb
+++ b/AMG_Models_MS4.ipynb
@@ -1588,7 +1588,8 @@
     "    for yr in set(years.values):\n",
     "        model = model_factory().fit(x_expanded[years==yr], y[years==yr])\n",
     "        score = model.score(x_expanded[years==yr], y[years==yr])\n",
-    "        print yr, \"  score:\", score, \" baseline:\", 1-y[years==yr].mean()    \n",
+    "        print yr, \"  score:\", score, \" baseline:\", 1-y[years==yr].mean()  \n",
+    "# TODO: k-fold cross-validation\n",
     "# TODO: Confusion matrix (right now, we're not doing well enough to worry about that)\n",
     "# TODO: Pretty-print\n",
     "# TODO: Store results to allow side-by-side"
