Added computation of 95% CI for default rates by year

--- a/AMG_Models_MS4.ipynb
+++ b/AMG_Models_MS4.ipynb
@@ -1686,6 +1686,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y=2008   n=  98   d=  21   p: 0.211 | 0.214 | 0.218\n",
+      "y=2009   n= 314   d=  46   p: 0.146 | 0.146 | 0.147\n",
+      "y=2010   n= 809   d= 110   p: 0.136 | 0.136 | 0.136\n",
+      "y=2011   n=1400   d= 225   p: 0.161 | 0.161 | 0.161\n",
+      "y=2012   n=3424   d= 573   p: 0.167 | 0.167 | 0.167\n",
+      "y=2013   n=4975   d=1005   p: 0.202 | 0.202 | 0.202\n",
+      "y=2014   n=4899   d= 964   p: 0.197 | 0.197 | 0.197\n",
+      "y=2015   n=1842   d= 186   p: 0.101 | 0.101 | 0.101\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Curious -- what are the 95 CI for the baselines?\n",
+    "for yr in set(years.values):\n",
+    "    yr_n = (years == yr).sum()\n",
+    "    yr_def = (y[years == yr]).sum()\n",
+    "    yr_p = (y[years == yr]).mean()\n",
+    "    yr_se = (yr_p * (1.0-yr_p) / yr_n)\n",
+    "    print \"y=%4d   n=%4d   d=%4d   p: %.3f | %.3f | %.3f\" % (yr, yr_n, yr_def, yr_p - 1.96*yr_se, yr_p, yr_p + 1.96*yr_se)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
