Added k-fold CV

--- a/AMG_Models_MS4.ipynb
+++ b/AMG_Models_MS4.ipynb
@@ -1578,18 +1578,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 110,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "def eval_model_by_year(model_factory):\n",
+    "    k = 5\n",
+    "    np.random.seed(1729)\n",
     "    for yr in set(years.values):\n",
-    "        model = model_factory().fit(x_expanded[years==yr], y[years==yr])\n",
-    "        score = model.score(x_expanded[years==yr], y[years==yr])\n",
+    "        indexes = np.where(years==yr)[0]\n",
+    "        np.random.shuffle(indexes)\n",
+    "        score = 0\n",
+    "        for i in range(k):\n",
+    "            train_indexes = list(indexes[0:len(indexes)*i/k]) + list(indexes[len(indexes)*(i+1)/k:])\n",
+    "            test_indexes = indexes[len(indexes)*i/k:len(indexes)*(i+1)/k]\n",
+    "        \n",
+    "            #print \"TRAIN \", train_indexes\n",
+    "            #print 'TEST', test_indexes\n",
+    "            #print \"Y\", y.iloc[test_indexes]\n",
+    "            \n",
+    "            # model = model_factory().fit(x_expanded[years==yr], y[years==yr])\n",
+    "            # score = model.score(x_expanded[years==yr], y[years==yr]) / k\n",
+    "            model = model_factory().fit(x_expanded.iloc[train_indexes,:], y.iloc[train_indexes])\n",
+    "            score += model.score(x_expanded.iloc[test_indexes], y.iloc[test_indexes]) / k\n",
     "        print yr, \"  score:\", score, \" baseline:\", 1-y[years==yr].mean()  \n",
-    "# TODO: k-fold cross-validation\n",
+    "\n",
     "# TODO: Confusion matrix (right now, we're not doing well enough to worry about that)\n",
     "# TODO: Pretty-print\n",
     "# TODO: Store results to allow side-by-side"
@@ -1597,7 +1612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 111,
    "metadata": {
     "collapsed": false
    },
@@ -1606,24 +1621,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2008   score: 0.918367346939  baseline: 0.785714285714\n",
-      "2009   score: 0.863057324841  baseline: 0.853503184713\n",
-      "2010   score: 0.734239802225  baseline: 0.864029666255\n",
-      "2011   score: 0.732857142857  baseline: 0.839285714286\n",
-      "2012   score: 0.696845794393  baseline: 0.832651869159\n",
-      "2013   score: 0.677788944724  baseline: 0.797989949749\n",
-      "2014   score: 0.693406817718  baseline: 0.803225147989\n",
-      "2015   score: 0.758414766558  baseline: 0.899022801303\n"
+      "2008   score: 0.743684210526  baseline: 0.785714285714\n",
+      "2009   score: 0.8407578085  baseline: 0.853503184713\n",
+      "2010   score: 0.8480024538  baseline: 0.864029666255\n",
+      "2011   score: 0.828571428571  baseline: 0.839285714286\n",
+      "2012   score: 0.825350663764  baseline: 0.832651869159\n",
+      "2013   score: 0.790351758794  baseline: 0.797989949749\n",
+      "2014   score: 0.806903128974  baseline: 0.803225147989\n",
+      "2015   score: 0.892517968658  baseline: 0.899022801303\n"
      ]
     }
    ],
    "source": [
-    "eval_model_by_year(lambda: Log_Reg(class_weight='balanced'))"
+    "eval_model_by_year(lambda: Log_Reg())\n",
+    "# NB: when not 'balanced' this one outscores the baseline, although not by much\n",
+    "# But not under k-fold!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 112,
    "metadata": {
     "collapsed": false
    },
@@ -1632,14 +1649,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2008   score: 1.0  baseline: 0.785714285714\n",
-      "2009   score: 0.87898089172  baseline: 0.853503184713\n",
-      "2010   score: 0.865265760198  baseline: 0.864029666255\n",
-      "2011   score: 0.891428571429  baseline: 0.839285714286\n",
-      "2012   score: 0.199474299065  baseline: 0.832651869159\n",
-      "2013   score: 0.223115577889  baseline: 0.797989949749\n",
-      "2014   score: 0.287405592978  baseline: 0.803225147989\n",
-      "2015   score: 0.900108577633  baseline: 0.899022801303\n"
+      "2008   score: 0.671578947368  baseline: 0.785714285714\n",
+      "2009   score: 0.719662058372  baseline: 0.853503184713\n",
+      "2010   score: 0.64394601641  baseline: 0.864029666255\n",
+      "2011   score: 0.675  baseline: 0.839285714286\n",
+      "2012   score: 0.657998463312  baseline: 0.832651869159\n",
+      "2013   score: 0.649246231156  baseline: 0.797989949749\n",
+      "2014   score: 0.656461612224  baseline: 0.803225147989\n",
+      "2015   score: 0.711728231413  baseline: 0.899022801303\n"
+     ]
+    }
+   ],
+   "source": [
+    "eval_model_by_year(lambda: Log_Reg(class_weight='balanced'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2008   score: 0.741578947368  baseline: 0.785714285714\n",
+      "2009   score: 0.780030721966  baseline: 0.853503184713\n",
+      "2010   score: 0.839237788513  baseline: 0.864029666255\n",
+      "2011   score: 0.835714285714  baseline: 0.839285714286\n",
+      "2012   score: 0.193930080676  baseline: 0.832651869159\n",
+      "2013   score: 0.222311557789  baseline: 0.797989949749\n",
+      "2014   score: 0.242490671447  baseline: 0.803225147989\n",
+      "2015   score: 0.895771474019  baseline: 0.899022801303\n"
      ]
     }
    ],
@@ -1649,7 +1692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -1658,14 +1701,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2008   score: 0.714285714286  baseline: 0.785714285714\n",
-      "2009   score: 0.691082802548  baseline: 0.853503184713\n",
-      "2010   score: 0.658838071693  baseline: 0.864029666255\n",
-      "2011   score: 0.717142857143  baseline: 0.839285714286\n",
-      "2012   score: 0.702686915888  baseline: 0.832651869159\n",
-      "2013   score: 0.648040201005  baseline: 0.797989949749\n",
-      "2014   score: 0.689324351909  baseline: 0.803225147989\n",
-      "2015   score: 0.676438653637  baseline: 0.899022801303\n"
+      "2008   score: 0.651052631579  baseline: 0.785714285714\n",
+      "2009   score: 0.636968766001  baseline: 0.853503184713\n",
+      "2010   score: 0.615566290929  baseline: 0.864029666255\n",
+      "2011   score: 0.712142857143  baseline: 0.839285714286\n",
+      "2012   score: 0.692170999274  baseline: 0.832651869159\n"
      ]
     }
    ],
