Some more specific investigation of small_business

--- a/AMG_Models_MS4.ipynb
+++ b/AMG_Models_MS4.ipynb
@@ -1578,15 +1578,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 119,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def eval_model_by_year(model_factory):\n",
+    "def eval_model_by_year(model_factory, columns=None):\n",
     "    k = 5\n",
     "    np.random.seed(1729)\n",
+    "    if columns is None:\n",
+    "        x_local = x_expanded\n",
+    "    else:\n",
+    "        x_local = x_expanded[columns]\n",
     "    for yr in set(years.values):\n",
     "        indexes = np.where(years==yr)[0]\n",
     "        np.random.shuffle(indexes)\n",
@@ -1601,8 +1605,8 @@
     "            \n",
     "            # model = model_factory().fit(x_expanded[years==yr], y[years==yr])\n",
     "            # score = model.score(x_expanded[years==yr], y[years==yr]) / k\n",
-    "            model = model_factory().fit(x_expanded.iloc[train_indexes,:], y.iloc[train_indexes])\n",
-    "            score += model.score(x_expanded.iloc[test_indexes], y.iloc[test_indexes]) / k\n",
+    "            model = model_factory().fit(x_local.iloc[train_indexes,:], y.iloc[train_indexes])\n",
+    "            score += model.score(x_local.iloc[test_indexes], y.iloc[test_indexes]) / k\n",
     "        print yr, \"  score:\", score, \" baseline:\", 1-y[years==yr].mean()  \n",
     "\n",
     "# TODO: Confusion matrix (right now, we're not doing well enough to worry about that)\n",
@@ -1692,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {
     "collapsed": false
    },
@@ -1705,7 +1709,10 @@
       "2009   score: 0.636968766001  baseline: 0.853503184713\n",
       "2010   score: 0.615566290929  baseline: 0.864029666255\n",
       "2011   score: 0.712142857143  baseline: 0.839285714286\n",
-      "2012   score: 0.692170999274  baseline: 0.832651869159\n"
+      "2012   score: 0.692170999274  baseline: 0.832651869159\n",
+      "2013   score: 0.635979899497  baseline: 0.797989949749\n",
+      "2014   score: 0.676058035063  baseline: 0.803225147989\n",
+      "2015   score: 0.662320313421  baseline: 0.899022801303\n"
      ]
     }
    ],
@@ -1754,6 +1761,50 @@
     "    yr_p = (y[years == yr]).mean()\n",
     "    yr_se = (yr_p * (1.0-yr_p) / yr_n)\n",
     "    print \"y=%4d   n=%4d   d=%4d   p: %.3f | %.3f | %.3f\" % (yr, yr_n, yr_def, yr_p - 1.96*yr_se, yr_p, yr_p + 1.96*yr_se)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.176228815945\n",
+      "0.276595744681\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Default rate for small business is higher, right?\n",
+    "print y.mean()\n",
+    "print y[x_expanded.loan_purpose__small_business == 1].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2008   score: 0.68  baseline: 0.785714285714\n",
+      "2009   score: 0.799283154122  baseline: 0.853503184713\n",
+      "2010   score: 0.849237021701  baseline: 0.864029666255\n",
+      "2011   score: 0.819285714286  baseline: 0.839285714286\n"
+     ]
+    }
+   ],
+   "source": [
+    "eval_model_by_year(lambda: Log_Reg(class_weight='balanced'), ['loan_purpose__small_business'])"
    ]
   },
   {
