Added SVC w.bias

--- a/milestones/milestone4.tex
+++ b/milestones/milestone4.tex
@@ -68,6 +68,7 @@ QDA                    &0.165    &0.863    &0.006 \cr
 Random Forest          &0.848    &0.848    &0.053 \cr
 Random Forest w/bias   &0.433    &0.901    &0.031 \cr
 Balanced SVC           &0.848    &0.849    &0.053 \cr
+Balanced SVC w/bias    &0.603    &0.904    &0.030 \cr
 }
 \vskip 4pt
 
